# bankey

./: README.md
bankey/: db.sqlite3  manage.py  pyproject.toml
bankey/bankey/: asgi.py  settings.py  urls.py  wsgi.py
bankey/core/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
bankey/core/migrations/: 0001_initial.py
bankey/core/templates/: balance.html  base.html  transfer.html
bankey/core/templates/registration/: login.html  signup.html
